# MADAI

./: Makefile.in  README  config.h.in  configure  configure.ac  copy_configfile.sh  madai.conf.default
src/: Makefile.am  Makefile.in  config.c  config.h  log.c  log.h  madai.c  madai.h  milter.c  milter.h  smtp.c  smtp.h  thread_control.c  thread_control.h
